packages/desktop/src-tauri/cargo_errors.txt
    Checking formatica v0.1.0 (C:\Users\avspn\mediadoc-studio\packages\desktop\src-tauri)
error[E0277]: the trait bound `[&str; 1]: AsRef<OsStr>` is not satisfied
   --> src\lib.rs:208:52
    |
208 |         || std::process::Command::new("where").arg(["soffice"]).hide_window().output().map(|o| o.status.success()).unwrap_or(false);
    |                                                --- ^^^^^^^^^^^ the trait `AsRef<OsStr>` is not implemented for `[&str; 1]`
    |                                                |
    |                                                required by a bound introduced by this call
    |
    = help: the following other types implement trait `AsRef<T>`:
              `&[<T as zerovec::ule::AsULE>::ULE]` implements `AsRef<zerovec::zerovec::slice::ZeroSlice<T>>`
              `[T]` implements `AsRef<[T]>`
              `[u8]` implements `AsRef<winnow::stream::bstr::BStr>`
              `[u8]` implements `AsRef<winnow::stream::bytes::Bytes>`
              `[T; N]` implements `AsRef<[T]>`
note: required by a bound in `std::process::Command::arg`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library\std\src\process.rs:727:4

error[E0425]: cannot find function `libreoffice_path` in this scope
   --> src\lib.rs:519:22
    |
519 |         let l_path = libreoffice_path();
    |                      ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `libreoffice_path` in this scope
   --> src\lib.rs:804:25
    |
804 |         ("LibreOffice", libreoffice_path()),
    |                         ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `python_path` in this scope
   --> src\lib.rs:808:20
    |
808 |         ("Python", python_path()),
    |                    ^^^^^^^^^^^ not found in this scope

warning: unused variable: `file_type`
    --> src\lib.rs:1288:5
     |
1288 |     file_type: String,
     |     ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_file_type`
     |
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `target_format`
    --> src\lib.rs:1289:5
     |
1289 |     target_format: String,
     |     ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_target_format`

Some errors have detailed explanations: E0277, E0425.
For more information about an error, try `rustc --explain E0277`.
warning: `formatica` (lib) generated 2 warnings
error: could not compile `formatica` (lib) due to 4 previous errors; 2 warnings emitted
